--- a/@twal/styles/components/nav/mainNav.scss
+++ b/@twal/styles/components/nav/mainNav.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  z-index: 800;
+
   .cancel {
     position: fixed;
     bottom: 20px;
