--- a/@twal/styles/components/nav/settings.scss
+++ b/@twal/styles/components/nav/settings.scss
@@ -4,5 +4,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 800;
+  z-index: 9999;
 }
